--- a/yajco-example-gettingStarted/pom.xml
+++ b/yajco-example-gettingStarted/pom.xml
@@ -11,7 +11,7 @@
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
-        <yajco.version>0.5.9</yajco.version>
+        <yajco.version>0.5.10-SNAPSHOT</yajco.version>
     </properties>
 
     <dependencies>
