--- a/yajco-example-json/pom.xml
+++ b/yajco-example-json/pom.xml
@@ -13,7 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	<maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <yajco.version>0.5.9</yajco.version>
+    <yajco.version>0.5.10-SNAPSHOT</yajco.version>
   </properties>
 
   <dependencies>
