--- a/yajco-example-robotKarel/pom.xml
+++ b/yajco-example-robotKarel/pom.xml
@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
-        <yajco.version>0.5.9</yajco.version>
+        <yajco.version>0.5.10-SNAPSHOT</yajco.version>
     </properties>
     
     <dependencies>
